Added Basic Chat Features / Refactored Authentication and User Controllers and Services
